--- a/css/style.css
+++ b/css/style.css
@@ -13592,6 +13592,7 @@ a.read_more i {
   font-weight: 800;
   font-size: 15px;
   margin-bottom: 5px;
+  width: 90%;
 }
 
 .nft__item_info {
@@ -15404,6 +15405,10 @@ img {
 @media only screen and (max-width: 992px) {
   .de-submenu {
     position: fixed;
+  }
+
+  .nft {
+    margin-top: 10rem !important;
   }
 
   .de_table .tr .td:nth-child(4),
